--- a/Ejemplos/modelo2021.css
+++ b/Ejemplos/modelo2021.css
@@ -5,7 +5,7 @@ entorno:
 autor: Prof. Carlos Boni
 fecha: Agosto 2021
 RECORDAR:
-en caso de conflictos se aplica el estilo que se define Ãºltimo,
+en caso de conflictos se aplica el estilo que se define Ultimo,
 o sea al final de este archivo o en la misma pagina html
 
 Se incluyen los principales SELECTORES SIMPLES; hay mÃ¡s combinaciones...
